# docker-continuous-integration

./: .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  note.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
test/: conftest.py
test/e2e/: test_app_redis_http.py
test/integration/: test_app_redis.py
web/: Dockerfile.dev  pyproject.toml  requirements-dev.txt  requirements.txt
web/src/page_tracker/: app.py
web/test/unit/: test_app.py
